# ghctestcase

./: LICENSE  README.txt  mlmodel.cabal  setup.sh
src/: MLCore.hs  Main.hs
src/Stats/: Types.hs
