name:                mlmodel
version:             0.1.0.0
license-file:        LICENSE
author:              yongqli
maintainer:          yongqli@kerrmetric.com
build-type:          Simple
cabal-version:       >= 1.22


executable ModelTest
  build-depends:
    base >=4.7 && <5,
    linear >= 1.18.0,
    mtl,
    vector,
    vector-th-unbox
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:
    Arrows,
    BangPatterns,
    ConstraintKinds,
    EmptyDataDecls,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTs,
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses,
    RankNTypes,
    ScopedTypeVariables,
    TemplateHaskell,
    TypeFamilies,
    TypeOperators
  ghc-options:
    -O1 -rtsopts -threaded
    -feager-blackholing